tests/lean/format_macro.lean.expected.out
"hi"
"hi"
"hi\nhi"
"1+1"
"2"
"{2}"
"a1"
"1a"
"}"
λ (α : ?M_1), to_fmt "" ++ to_fmt α ++ to_fmt "" : ?M_1 → format
format_macro.lean:13:6: error: invalid expression, unexpected token
format_macro.lean:14:6: error: invalid expression
format_macro.lean:15:6: error: invalid expression
"abc"
